Fixed margin on Work component header tag and made the padding on the grid more aligned with the padding throughout the other components

--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,7 @@ h2 {
 
 .work h2 {
   text-align: right;
+  margin-right: 2.5%;
 }
 
 .work ul {
@@ -124,8 +125,8 @@ h2 {
 }
 
 .work ul li {
-  width: 32.5%;
-  padding-top: 10px;
+  width: 31.5%;
+  padding-top: 25px;
 }
 
 .portfolio-piece img {
